@@ -1,16 +1,11 @@
-eiffel.hex     : U301 : PIC16F876A  (raven)
-
 iksi.jed       : U402 : ATF22V10C   (raven)
 
 narnia.jed     : U501 : ATF22V10C   (raven)
 
 nessi.jed      : U108 : ATF1508AS   (raven)
 
+eiffel.hex     : U301 : PIC16F876A  (raven with eiffel controller)
+
+ckbd_a1.bin    : U301 : CH559L      (raven with ckbd controller)
+
 ravenprog.uf2  : U102 : RP2040      (simm programmer)
-
-
-
-
-
-
-
